force-app/main/default/objects/Pipeline_Column_Selection__c/Pipeline_Column_Selection__c.object-meta.xml
<CustomObject>
    <description>Used to store users&apos; selections of which columns to display in the pipeline management page.</description>
    <label>Pipeline Column</label>
    <nameField>
        <displayFormat>PC-{0000}</displayFormat>
        <label>Pipeline Column Selection Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Pipeline Columns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>