force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Columns__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Columns__c</fullName>
    <label>Engagement Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>