force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Office_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Office_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Last Engagement Office Filter Selection</description>
    <label>Engagement Office Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>