force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Record_Type_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Record_Type_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Last Engagement Record Type Filter Selection</description>
    <label>Engagement Record Type Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>