force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Show_Records_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Show_Records_Filter__c</fullName>
    <defaultValue>&quot;TeamEngagements&quot;</defaultValue>
    <description>Last Engagement Show Records Filter Selection</description>
    <label>Engagement Show Records Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>