force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Sort_Direction__c</fullName>
    <defaultValue>&quot;ASC&quot;</defaultValue>
    <description>Last sort direction of the Engagement Manager</description>
    <label>Engagement Sort Direction</label>
    <length>5</length>
    <type>Text</type>
</CustomField>