force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Sort_Field__c</fullName>
    <description>Last Engagement Field Sorted On</description>
    <label>Engagement Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>