force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Staff_Id_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Staff_Id_Filter__c</fullName>
    <description>Last Engagement Staff Id Filter</description>
    <label>Engagement Staff Id Filter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>