force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Staff_Name_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Staff_Name_Filter__c</fullName>
    <description>Last Engagement Staff Name Filter Selected</description>
    <label>Engagement Staff Name Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>