force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Staff_Product_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Staff_Product_Filter__c</fullName>
    <description>Engagement Staff Product Filter</description>
    <inlineHelpText>Engagement Staff Product Filter</inlineHelpText>
    <label>Engagement Staff Product Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>