force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Staff_Role_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Staff_Role_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Last Engagement Staff Role Filter Selected</description>
    <label>Engagement Staff Role Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>