force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Stage_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Stage_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Last Engagement Stage Filter Selected</description>
    <label>Engagement Stage Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>