force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Engagement_Status_Filter__c.field-meta.xml
<CustomField>
    <fullName>Engagement_Status_Filter__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <description>Last Engagement Status Filter</description>
    <label>Engagement Status Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>