force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Include_Reviewer_Roles__c.field-meta.xml
<CustomField>
    <fullName>Include_Reviewer_Roles__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Include Reviewer Roles (FVA) 
- Prelim Reviewer 
- Reviewer 
- Final Reviewer</description>
    <inlineHelpText>Include Reviewer Roles</inlineHelpText>
    <label>Include Reviewer Roles</label>
    <type>Checkbox</type>
</CustomField>