force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Columns__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Columns__c</fullName>
    <label>Opportunity Columns</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>