force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Show_Records_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Show_Records_Filter__c</fullName>
    <defaultValue>&quot;TeamOpportunities&quot;</defaultValue>
    <description>Last Show Records Filter Selection</description>
    <label>Opportunity Show Records Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>