force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Sort_Direction__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sort_Direction__c</fullName>
    <defaultValue>&quot;ASC&quot;</defaultValue>
    <description>Last Opportunity Sort Direction of the Opportunity Manager</description>
    <label>Opportunity Sort Direction</label>
    <length>5</length>
    <type>Text</type>
</CustomField>