force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Sort_Field__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Sort_Field__c</fullName>
    <description>Last Sorted Opportunity Field</description>
    <label>Opportunity Sort Field</label>
    <length>255</length>
    <type>Text</type>
</CustomField>