force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Staff_Id_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Staff_Id_Filter__c</fullName>
    <description>Last Opportunity Staff Id Filter Selected</description>
    <label>Opportunity Staff Id Filter</label>
    <length>18</length>
    <type>Text</type>
</CustomField>