force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Staff_Industry_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Staff_Industry_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Last Staff Industry Filter Selected</description>
    <label>Opportunity Staff Industry Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>