force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Staff_Name_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Staff_Name_Filter__c</fullName>
    <description>Last Opportunity Staff Name Filter Selected</description>
    <label>Opportunity Staff Name Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>