force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Staff_Product_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Staff_Product_Filter__c</fullName>
    <label>Opportunity Staff Product Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>