force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Staff_Role_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Staff_Role_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Stores the Last Selected Opportunity Staff Role</description>
    <label>Opportunity Staff Role Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>