force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Stage_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Stage_Filter__c</fullName>
    <defaultValue>&quot;All&quot;</defaultValue>
    <description>Last Opportunity Stage Filter Selection</description>
    <label>Opportunity Stage Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>