force-app/main/default/objects/Pipeline_Column_Selection__c/fields/Opportunity_Status_Filter__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Status_Filter__c</fullName>
    <defaultValue>&quot;Active&quot;</defaultValue>
    <description>Last Opportunity Status Filter</description>
    <label>Opportunity Status Filter</label>
    <length>255</length>
    <type>Text</type>
</CustomField>